# dex-rust

./: DEPLOYMENT.md  QUICKSTART_DEPLOY.md  README.md  deploy.sh  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  TESTING.md  fly.toml  railway.toml  run_tests.sh
backend/.cargo/: test-dependencies.toml
backend/src/: crypto_service.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  models_test.rs
backend/tests/: crypto_service_test.rs  db_test.rs  integration_test.rs  property_test.rs  rate_limiting_test.rs
backend/tests/common/: mod.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Header.tsx  LoadingSpinner.tsx  SearchBar.tsx  StatsOverview.tsx  TokenDetail.tsx  TokenList.tsx
