[package]
name = "crypto-tracker-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto-tracker-backend"
path = "src/main.rs"

[lib]
name = "crypto_tracker_backend"
path = "src/lib.rs"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"

[dev-dependencies]
actix-rt = "2.9"
mockito = "1.2"
wiremock = "0.6"
serial_test = "3.0"
tokio-test = "0.4"
proptest = "1.4"
